refactor : 코드 리팩토링
- JDBCTemplate close 하는 메서드 3개 -> 1개로 통합